# ai-reliability-fw

./: .env.sample  .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
demo/: failure_path_runner.py  fixtures.py
docs/: diagrams.md
docs/adr/: 0001-postgresql-sqlalchemy-async-persistence.md  0002-alembic-for-migrations.md  0003-six-layer-unidirectional-architecture.md  0004-deterministic-uuid5-call-ids.md  0005-on-conflict-do-nothing-idempotent-inserts.md  0006-validators-list-ordering-convention.md  0007-pure-function-decision-engine.md  0008-no-phases-table-phase-id-as-opaque-uuid.md  0009-manual-constructor-dependency-injection.md  0010-environment-variable-only-configuration.md  0011-phase-executor-llm-call-contract.md  0011-semver-git-tag-release-process.md  ADR.md  README.md
docs/diagrams/: 01-system-context.md  02-layer-architecture.md  03-class-diagram.md  04-sequence-phase-executor.md  05-decision-engine.md  06-database-schema.md  README.md  erDiagram.mmd
impl-prompts/: guardrails-security-eval-integration.md  launch-security-eval-codex-mini.open.md  task-01-contract-and-success-metadata.open.md  task-02-framework-verification.open.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_token_cost_and_content_error.py  0003_move_to_reliability_schema.py
src/: __init__.py
src/core/: models.py
src/db/: repository.py  session.py
src/engine/: decision_engine.py  phase_executor.py
src/llm/: client.py
src/validators/: base.py  content_validator.py  input_schema_validator.py  json_schema_validator.py  safety_validator.py
tests/: test_decision_engine.py  test_phase_executor.py  test_repository.py  test_validators.py
