[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-reliability-fw"
version = "0.1.0"
description = "Prototype framework for validating, retrying, and persisting LLM workflow executions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.18.4",
    "asyncpg==0.30.0",
    "jsonschema==4.26.0",
    "psycopg[binary]==3.2.10",
    "psycopg2",
    "python-dotenv==1.2.2",
    "rich==14.3.3",
    "SQLAlchemy==2.0.48",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true
