[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-reliability-fw"
version = "0.2.1"
description = "Prototype framework for validating, retrying, and persisting LLM workflow executions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.18.4",
    "asyncpg==0.30.0",
    "jsonschema==4.26.0",
    "psycopg[binary]==3.2.10",
    "psycopg2",
    "python-dotenv==1.2.2",
    "rich==14.3.3",
    "SQLAlchemy==2.0.48",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "migrations*"]
namespaces = true

[tool.setuptools.package-data]
"migrations" = ["**/*.py", "**/*.mako"]
"src" = ["**/*.json"]

# alembic.ini is shipped via MANIFEST.in so consumers can run:
#   alembic -c $(python -c "import ai_reliability_fw; import os; print(os.path.join(os.path.dirname(ai_reliability_fw.__file__), '../../alembic.ini'))") upgrade head

# Version is the single source of truth in src/__init__.py.
# To release: bump __version__ there, update CHANGELOG.md, commit, tag v<version>.
